# tomographic-map-matching

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml
cpp/tomographic_map_matching/: CMakeLists.txt
cpp/tomographic_map_matching/include/tomographic_map_matching/: consensus.hpp  estimate_rigid_2d.hpp  fpfh_base.hpp  orb_teaser.hpp  tomographic_matcher.hpp
cpp/tomographic_map_matching/src/: estimate_rigid_2d.cpp  fpfh_teaser.cpp  map_matcher_base.cpp  orb_teaser.cpp
data/: data-demo.json  reference-result.out
include/tomographic_map_matching/: consensus.hpp  fpfh_base.hpp  fpfh_ransac.hpp  fpfh_teaser.hpp  map_matcher_base.hpp  orb_teaser.hpp  tomographic_matcher.hpp
ros2/: CMakeLists.txt  package.xml
ros2/map_matcher/: CMakeLists.txt  package.xml
ros2/map_matcher/launch/: client_launch.py  server_launch.py
ros2/map_matcher/src/: conversions.hpp  map_matcher_client.cpp  map_matcher_server.cpp
ros2/map_matcher_interfaces/: CMakeLists.txt  package.xml
ros2/map_matcher_interfaces/action/: MatchMaps.action
ros2/map_matcher_interfaces/msg/: CartesianBounds.msg  Slice.msg  SliceMap.msg
ros2/map_matcher_interfaces/srv/: TriggerMatching.srv
ros2/map_matcher_server/: CMakeLists.txt  package.xml
ros2/map_matcher_server/src/: map_matcher_node.cpp  map_matcher_node.hpp
ros2/src/: map_matcher_node.cpp  map_matcher_node.hpp
src/: batch_processing.cpp  consensus.cpp  fpfh_base.cpp  fpfh_ransac.cpp  fpfh_teaser.cpp  map_matcher_base.cpp  orb_teaser.cpp  tomographic_matcher.cpp
